[bug][product]: fix buttons on tablet/mobile

--- a/app/assets/stylesheets/redesign/_product.css.scss
+++ b/app/assets/stylesheets/redesign/_product.css.scss
@@ -30,7 +30,7 @@ z.list-group-item.customization-option  {
   }
 
   .secondary-actions .col-md-6:last-child {
-    @media(max-width: 768px){
+    @media(max-width: 480px){
       padding-left: 0;
       margin-top: 15px;
     }
